1.8.3 changelog

Bugs:
- Strapon can only be put on when not wearing a strapon
- Split bluff and wait into two skills
- Make powerful hips allow you to grind from the submissive position
- Make oral pin require that the opponent is mobile
- Make Samantha's sexy dance skill use similar skill restrictions
- Make foot smother require that you are dominant and mobile
- Added some text for footjob vs pc that had no cocks
- Fix issue where you could throw/use nonexistent drafts
- Fix issue where putting on open cup bra would make your exposure over 1

Other changes:
- Add in rest of Samantha's portraits
	- I'm not exactly happy with some of them, may change them later

1.8.2.9 changelog

Balance:
- Using spiral thrust now also applies a 8 turn Lethargic debuff (Mojo gain is reduced by 75%)
- Pheromones has been buffed. It now applies much more when you are close to the opponent and you're exposed.
	- The damage has also been buffed to be 1 + Animism / 10
- Feral status effect has been changed
	- Now applies to Kat whenever she is above 50 arousal
	- Removed from Kat when she is below 50 arousal
	- Changed buff
		- Used to be 2 power, 3 cunning, 2 seduction, 2 animism, 2 speed
		- Now 1+(animism / 2) power, 3 cunning, 2 seduction, 1.5 x animism, 2 speed
	- Now makes orgasms only reduce arousal by 50% and reduces willpower loss to 33% of normal.
	- Now has a (1 + Animism) / (2 + Animism) chance to ignore an orgasm for a turn even at full arousal.
- Removed petite requirement from Pounce (NICE SKILL YOU HAVE THERE, KAT. SHAME YOU CAN'T USE IT)

Bugs:
- Changed strap-on to clothing layer 2 (same layer as pants, so if you put on a strapon, you'll remove your pants or skirt)
- Fixed a bug with striping trap causing a crash
- Fixed a bug where ass fucking would pleasure pussy instead (and crash if they don't have one)
- Fixed a bug where other NPCs snapping out of enthrallment (anywhere on the playing field) would print a message for the player